--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gatsby-source-filesystem": "^2.2.2",
     "gatsby-transformer-json": "^2.3.1",
     "gatsby-transformer-sharp": "^2.4.3",
+    "gh-pages": "^2.2.0",
     "lodash.orderby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
     "luxon": "^1.23.0",
