--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Adam Sparks <adamsparks92@gmail.com>",
   "dependencies": {
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/lodash.groupby": "^4.6.6",
+    "@types/lodash.throttle": "^4.1.6",
     "classnames": "^2.2.6",
     "dexie": "^2.0.4",
     "framer-motion": "^1.10.3",
@@ -23,6 +26,7 @@
     "gatsby-transformer-sharp": "^2.4.4",
     "gh-pages": "^2.2.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.groupby": "^4.6.0",
     "lodash.orderby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
     "lodash.throttle": "^4.1.1",
