enable recipes, add search, add share menu

--- a/package.json
+++ b/package.json
@@ -8,31 +8,35 @@
     "classnames": "^2.2.6",
     "dexie": "^2.0.4",
     "framer-motion": "^1.10.3",
-    "gatsby": "^2.20.18",
-    "gatsby-image": "^2.3.2",
+    "gatsby": "^2.20.25",
+    "gatsby-image": "^2.3.4",
     "gatsby-plugin-alias-imports": "^1.0.5",
-    "gatsby-plugin-google-analytics": "^2.2.2",
-    "gatsby-plugin-manifest": "^2.3.3",
-    "gatsby-plugin-offline": "^3.1.2",
-    "gatsby-plugin-react-helmet": "^3.2.2",
+    "gatsby-plugin-google-analytics": "^2.2.4",
+    "gatsby-plugin-manifest": "^2.3.5",
+    "gatsby-plugin-offline": "^3.1.4",
+    "gatsby-plugin-react-helmet": "^3.2.4",
     "gatsby-plugin-react-svg": "^3.0.0",
-    "gatsby-plugin-sass": "^2.2.1",
-    "gatsby-plugin-sharp": "^2.5.4",
-    "gatsby-source-filesystem": "^2.2.2",
-    "gatsby-transformer-json": "^2.3.1",
-    "gatsby-transformer-sharp": "^2.4.4",
+    "gatsby-plugin-sass": "^2.2.3",
+    "gatsby-plugin-sharp": "^2.5.6",
+    "gatsby-source-filesystem": "^2.2.4",
+    "gatsby-transformer-json": "^2.3.3",
+    "gatsby-transformer-sharp": "^2.4.6",
     "gh-pages": "^2.2.0",
+    "jsqr": "^1.2.0",
     "lodash.debounce": "^4.0.8",
     "lodash.groupby": "^4.6.0",
     "lodash.orderby": "^4.6.0",
     "lodash.sortby": "^4.7.0",
     "lodash.throttle": "^4.1.1",
     "luxon": "^1.23.0",
+    "lz-string": "^1.4.4",
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
+    "qrcode-generator": "^1.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-window": "^1.8.5"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
@@ -42,11 +46,11 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
+    "build": "gatsby build --prefix-paths",
+    "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
-    "serve": "gatsby serve",
+    "serve": "gatsby serve --prefix-paths -H 0.0.0.0",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
