--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^1.10.3",
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.3.4",
+    "gatsby-optional-chaining": "^1.0.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-analytics": "^2.2.4",
     "gatsby-plugin-manifest": "^2.3.5",
