add scraper, add precaching for critters, add sort by order

--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "version": "0.1.0",
   "author": "Adam Sparks <adamsparks92@gmail.com>",
   "dependencies": {
+    "@tensorflow-models/coco-ssd": "^2.2.1",
+    "@tensorflow/tfjs-backend-cpu": "^2.8.2",
+    "@tensorflow/tfjs-backend-webgl": "^2.8.2",
+    "@tensorflow/tfjs-converter": "^2.8.2",
+    "@tensorflow/tfjs-core": "^2.8.2",
     "classnames": "^2.2.6",
     "dexie": "^2.0.4",
     "framer-motion": "^1.11.1",
@@ -19,6 +24,7 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.11.2",
+    "gatsby-plugin-webpack-bundle-analyzer": "^1.0.5",
     "gatsby-source-filesystem": "^2.8.1",
     "gatsby-transformer-json": "^2.8.0",
     "gatsby-transformer-sharp": "^2.9.0",
